--- a/views/five_four.erb
+++ b/views/five_four.erb
@@ -1,4 +1,4 @@
-<!-- /views/two_six.erb -->
+<!-- /views/five_four.erb -->
 
 <!DOCTYPE html>
 <html>
@@ -15,8 +15,8 @@
     <div><a href="/dice/5/4">4d5</a></div>
   </div>
   
-  <h1>2d6</h1>
+  <h1>5d4</h1>
 
-  <p><%= @outcome %></p>"
+  <p><%= @outcome %></p>
 </body>
 </html>
