--- a/views/one_twenty.erb
+++ b/views/one_twenty.erb
@@ -1,4 +1,4 @@
-<!-- /views/two_six.erb -->
+<!-- /views/one_twenty.erb -->
 
 <!DOCTYPE html>
 <html>
@@ -14,9 +14,15 @@
     <div><a href="/dice/1/20">1d20</a></div>
     <div><a href="/dice/5/4">4d5</a></div>
   </div>
-  
-  <h1>2d6</h1>
 
-  <p><%= @outcome %></p>"
+<h1>1d20</h1>
+
+<% if @die == 1 %>
+  <p style="color: red"><%= @outcome %></p>
+<% elsif @die == 20 %>
+  <p style="color: green"><%= @outcome %></p>
+<% else %>
+  <p><%= @outcome %></p>
+<% end %>
 </body>
 </html>
