--- a/views/two_ten.erb
+++ b/views/two_ten.erb
@@ -1,4 +1,4 @@
-<!-- /views/two_six.erb -->
+<!-- /views/two_ten.erb -->
 
 <!DOCTYPE html>
 <html>
@@ -15,8 +15,8 @@
     <div><a href="/dice/5/4">4d5</a></div>
   </div>
   
-  <h1>2d6</h1>
-
-  <p><%= @outcome %></p>"
+  <h1>2d10</h1>
+  
+  <p><%= @outcome %></p>
 </body>
 </html>
